container resset-password

--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -1,38 +1,40 @@
-<div class="container register">
-    <div class="row">
-        <div class="col-md-3 register-left">
-            <img src="assets/img/Logo_blanco.png" alt="INCO logo">
-            <h1>INCO</h1>
-            <button routerLink="/login" class="btnback">Back</button>
-        </div>
-        <div class="col-md-9 register-right">
-            <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
-                    <h3 class="register-heading">Reset Password</h3>
-                    <div class="row register-form">
-                        <div class="col-md-3">
-                        </div>
-                        <div class="col-md-6 ">
-                            <form *ngIf="resetPassForm" [formGroup]="resetPassForm" (ngSubmit)="sendMail()">
-                                <h6>Please insert your Email</h6>
-                                <div class="form-group">
-                                    <input type="text"
-                                           class="form-control"
-                                           placeholder="Email *"
-                                           formControlName="email">
-                                    <button type="submit"
-                                            class="btnRegister w-100"
-                                            [disabled]="!resetPassForm.valid">
-                                        Reset password
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-md-3">
+<div class="register">
+     <div class="container">   
+        <div class="row">
+            <div class="col-md-3 register-left">
+                <img src="assets/img/Logo_blanco.png" alt="INCO logo">
+                <h1>INCO</h1>
+                <button routerLink="/login" class="btnback">Back</button>
+            </div>
+            <div class="col-md-9 register-right">
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
+                        <h3 class="register-heading">Reset Password</h3>
+                        <div class="row register-form">
+                            <div class="col-md-3">
+                            </div>
+                            <div class="col-md-6 ">
+                                <form *ngIf="resetPassForm" [formGroup]="resetPassForm" (ngSubmit)="sendMail()">
+                                    <h6>Please insert your Email</h6>
+                                    <div class="form-group">
+                                        <input type="text"
+                                            class="form-control"
+                                            placeholder="Email *"
+                                            formControlName="email">
+                                        <button type="submit"
+                                                class="btnRegister w-100"
+                                                [disabled]="!resetPassForm.valid">
+                                            Reset password
+                                        </button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col-md-3">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+     </div>
 </div>
