correcion bugs js

--- a/src/app/components/influencer-collaboration/influencer-collaboration.component.html
+++ b/src/app/components/influencer-collaboration/influencer-collaboration.component.html
@@ -1,64 +1,73 @@
 <main id="main">
-  <section class="section " id="section3">
+  <section class="section " id="portfolio">
     <div class="container">
-      <div class="section-heading">
-        <h2>Types of the weather</h2>
+      <div class="section-title">
+        <h2>Collaboration</h2>
         <div class="line-dec"></div>
-        <span>Some samples of different  types of ... </span>
+        <span>Select your favorite </span>
       </div>
       <div class="row">
-        <div class="isotope-wrapper">
-          <div class="isotope-toolbar">
-            <label><button class="active" data-type="*" name="isotope-filter" ></button>
-              <span>All</span></label>
-            <label><button class=""  data-type="dry" name="isotope-filter" ></button>
-              <span>Dry weather</span></label>
-            <label><button class=""  data-type="temperate" name="isotope-filter" ></button>
-              <span>Temperate weather</span></label>
-            <label><button class=""  data-type="polar" name="isotope-filter" ></button>
-              <span>Polar weather</span></label>
-          </div>
-          <div class="isotope-box">
-            <div class="isotope-item" data-type="dry">
-              <figure>
-                <img src="https://www.worldatlas.com/r/w960-q80/upload/8b/e7/81/shutterstock-525888652.jpg" alt="sq-sample26" />
-              </figure>
-          </div>
-  
-            <div class="isotope-item" data-type="temperate">
-              <figure>
-                <img src="https://www.worldatlas.com/r/w960-q80/upload/84/e9/90/shutterstock-371213029.jpg" alt="sq-sample26" />
-              </figure>
+        <div class="col-lg-12 d-flex justify-content-center">
+          <div class="isotope-wrapper">
+            <div class="isotope-toolbar">
+              <label id="portfolio-flters"><button class="active btn btn-primary" data-type="*" name="isotope-filter"></button>
+                <span class="display-6">All</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Cosmetic" name="isotope-filter"></button>
+                <span>Cosmetic</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Technology" name="isotope-filter"></button>
+                <span>Technology</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Food" name="isotope-filter"></button>
+                <span>Food</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Sports" name="isotope-filter"></button>
+                <span>Sports</span></label>
             </div>
-  
-            <div class="isotope-item" data-type="temperate">
-              <figure>
-                <img src="https://www.worldatlas.com/r/w960-q80/upload/b0/0c/82/shutterstock-1054865435.jpg" alt="sq-sample26" />
-              </figure>
-            </div>
-  
-            <div class="isotope-item" data-type="polar">
-              <figure>
-                <img src="https://www.worldatlas.com/r/w960-q80/upload/0c/ed/99/shutterstock-67393744.jpg" alt="sq-sample26" />
-              </figure>
-            </div>
-  
-            <div class="isotope-item" data-type="temperate">
-              <figure>
-                <img src="https://www.worldatlas.com/r/w960-q80/upload/29/b9/94/shutterstock-662889487.jpg" alt="sq-sample26" />
-              </figure>
-            </div>
-  
-            <div class="isotope-item" data-type="dry">
-              <figure>
-                <img src="https://www.worldatlas.com/r/w960-q80/upload/00/ff/23/shutterstock-1925893916.jpg" alt="galdiator" />
-              </figure>
+            <div class="isotope-box">
+              <div class="isotope-item" data-type="Cosmetic">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/8b/e7/81/shutterstock-525888652.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Technology">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/84/e9/90/shutterstock-371213029.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Technology">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/b0/0c/82/shutterstock-1054865435.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Food">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/0c/ed/99/shutterstock-67393744.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Sports">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/29/b9/94/shutterstock-662889487.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Cosmetic">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/00/ff/23/shutterstock-1925893916.jpg"
+                    alt="galdiator" />
+                </figure>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  
-  </main><!-- End #main -->
-  
+
+</main><!-- End #main -->
