--- a/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
+++ b/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
@@ -1,129 +1,73 @@
 <main id="main">
-  <!-- ======= Portfolio Section ======= -->
-  <section id="portfolio" class="portfolio section-bg">
+  <section class="section " id="portfolio">
     <div class="container">
-      <!--Esta se puede usar para las colaboraciones o historial pero si hay que sacarle provecho-->
       <div class="section-title">
-        <h2>Colaboration</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Collaboration</h2>
+        <div class="line-dec"></div>
+        <span>Select your favorite </span>
       </div>
-
-      <div class="row" data-aos="fade-up">
+      <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
-          <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-web">Cosmetic</li>
-            <li data-filter=".filter-app">Technology</li>
-            <li data-filter=".filter-card">Food</li>
-            <li data-filter=".filter-web">Sports</li>
-          </ul>
+          <div class="isotope-wrapper">
+            <div class="isotope-toolbar">
+              <label id="portfolio-flters"><button class="active btn btn-primary" data-type="*" name="isotope-filter"></button>
+                <span class="display-6">All</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Cosmetic" name="isotope-filter"></button>
+                <span>Cosmetic</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Technology" name="isotope-filter"></button>
+                <span>Technology</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Food" name="isotope-filter"></button>
+                <span>Food</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Sports" name="isotope-filter"></button>
+                <span>Sports</span></label>
+            </div>
+            <div class="isotope-box">
+              <div class="isotope-item" data-type="Cosmetic">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/8b/e7/81/shutterstock-525888652.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Technology">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/84/e9/90/shutterstock-371213029.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Technology">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/b0/0c/82/shutterstock-1054865435.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Food">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/0c/ed/99/shutterstock-67393744.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Sports">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/29/b9/94/shutterstock-662889487.jpg"
+                    alt="sq-sample26" />
+                </figure>
+              </div>
+
+              <div class="isotope-item" data-type="Cosmetic">
+                <figure>
+                  <img src="https://www.worldatlas.com/r/w960-q80/upload/00/ff/23/shutterstock-1925893916.jpg"
+                    alt="galdiator" />
+                </figure>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-
-      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/PSG-Futbol.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/PSG-Futbol.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/portfolio-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/Manchester-futbol.jpg"class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/Manchester-futbol.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/Hotdog-comida.jpg"class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/Hotdog-comida.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/portfolio-5.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/RealMadird_futbol.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/RealMadird_futbol.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/portfolio-7.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/portfolio-7.jpg"data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/Fideos_comida.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/Fideos_comida.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <label for="exampleFormControlFile1">Name</label>
-            <img src="./../../../assets/img/colaboratory/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-links">
-              <a href="./../../../assets/img/colaboratory/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
     </div>
-  </section><!-- End Portfolio Section -->
+  </section>
 
 </main><!-- End #main -->
