--- a/src/app/components/entrepreneur-score/entrepreneur-score.component.html
+++ b/src/app/components/entrepreneur-score/entrepreneur-score.component.html
@@ -18,7 +18,7 @@
                     <div class="progress">
                         <span class="skill"><i class="bi bi-star-fill"></i> <i class="bi bi-star-fill"></i><i
                                 class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
-                                class="bi bi-star-fill"></i><i class="val">80%</i></span>
+                                class="bi bi-star-fill"></i><i class="val"></i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                  aria-valuemax="100"></div>
@@ -27,7 +27,7 @@
 
                     <div class="progress">
                         <span class="skill"><i class="bi bi-star-fill"></i> <i class="bi bi-star-fill"></i><i
-                                class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="val">10%</i></span>
+                                class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="val"></i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0"
                                  aria-valuemax="100"></div>
@@ -36,7 +36,7 @@
 
                     <div class="progress">
                         <span class="skill"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
-                                class="bi bi-star-fill"></i><i class="val">5%</i></span>
+                                class="bi bi-star-fill"></i><i class="val"></i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0"
                                  aria-valuemax="100"></div>
@@ -49,7 +49,7 @@
 
                     <div class="progress">
                         <span class="skill"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i> <i
-                                class="val">5%</i></span>
+                                class="val"></i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0"
                                  aria-valuemax="100"></div>
@@ -57,7 +57,7 @@
                     </div>
 
                     <div class="progress">
-                        <span class="skill"><i class="bi bi-star-fill"></i><i class="val">0%</i></span>
+                        <span class="skill"><i class="bi bi-star-fill"></i><i class="val"></i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                                  aria-valuemax="100"></div>
