--- a/src/app/components/influencer-collaboration/influencer-collaboration.component.html
+++ b/src/app/components/influencer-collaboration/influencer-collaboration.component.html
@@ -4,7 +4,7 @@
       <div class="section-title">
         <h2>Collaboration</h2>
         <div class="line-dec"></div>
-        <span>Select your favorite </span>
+        <span>Select your entrepreneur favorite </span>
       </div>
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
@@ -24,42 +24,42 @@
             <div class="isotope-box">
               <div class="isotope-item" data-type="Cosmetic">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/8b/e7/81/shutterstock-525888652.jpg"
+                  <img src="https://static.bellezaparatodos.com/2019/12/EM-Cosmetics-Magic-Hour-Collection.jpg"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Technology">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/84/e9/90/shutterstock-371213029.jpg"
+                  <img src="https://cdn2.totalcode.net/mercacentro/product-zoom/es/celular-xiaomi-redmi-note-8-128-gb-azul-1.webp"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Technology">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/b0/0c/82/shutterstock-1054865435.jpg"
+                  <img src="https://falabella.scene7.com/is/image/Falabella/15229154_1?wid=800&hei=800&qlt=70"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Food">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/0c/ed/99/shutterstock-67393744.jpg"
+                  <img src="https://www.recetasjudias.com/wp-content/uploads/2015/06/Causa-Limena2.jpg"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Sports">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/29/b9/94/shutterstock-662889487.jpg"
+                  <img src="https://i.linio.com/p/223a3904709c26a7f2cf84b20d84914e-product.jpg"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Cosmetic">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/00/ff/23/shutterstock-1925893916.jpg"
+                  <img src="https://static.vix.com/es/sites/default/files/styles/1x1/public/imj/esto-es-lo-que-te-sucedera-si-usas-cosmeticos-de-mala-calidad.jpg"
                     alt="galdiator" />
                 </figure>
               </div>
