--- a/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
+++ b/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
@@ -4,7 +4,7 @@
       <div class="section-title">
         <h2>Collaboration</h2>
         <div class="line-dec"></div>
-        <span>Select your favorite </span>
+        <span>Select your influencer favorite </span>
       </div>
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
@@ -24,42 +24,42 @@
             <div class="isotope-box">
               <div class="isotope-item" data-type="Cosmetic">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/8b/e7/81/shutterstock-525888652.jpg"
+                  <img src="https://elcomercio.pe/resizer/6VstkRKUycChPLg1LkQzNzbLFck=/1200x900/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/VNEMTUFDDNFXFBYSADX25454UQ.jpg"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Technology">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/84/e9/90/shutterstock-371213029.jpg"
+                  <img src="https://i.ytimg.com/vi/YrETNRtC3-s/maxresdefault.jpg"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Technology">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/b0/0c/82/shutterstock-1054865435.jpg"
+                  <img src="https://pbs.twimg.com/media/DSaDgAnWAAAWtqz.jpg"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Food">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/0c/ed/99/shutterstock-67393744.jpg"
+                  <img src="https://elcomercio.pe/resizer/_osngAPYc6LNk30ozWoJRWR7y4c=/1200x1200/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/ULZM6RERGRBFFDZ7UX3OH6DQPU.jpg"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Sports">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/29/b9/94/shutterstock-662889487.jpg"
+                  <img src="https://i.ytimg.com/vi/f25Yj2roCV4/maxresdefault.jpg"
                     alt="sq-sample26" />
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="Cosmetic">
                 <figure>
-                  <img src="https://www.worldatlas.com/r/w960-q80/upload/00/ff/23/shutterstock-1925893916.jpg"
+                  <img src="https://www.veridicoshop.com/wp-content/uploads/2018/11/veridico-shop-james-charles-palette5.jpg"
                     alt="galdiator" />
                 </figure>
               </div>
