--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -30,7 +30,7 @@
 					</p>
 					</mat-card-content>
 					<mat-card-actions>
-					<button mat-button>MATCH</button>
+					<button mat-button (click)="createMatch(personaje)">MATCH</button>
 					</mat-card-actions>
 				</mat-card>
 			</div>
@@ -54,7 +54,7 @@
 					</p>
 					</mat-card-content>
 					<mat-card-actions>
-					<button mat-button>MATCH</button>
+					<button mat-button (click)="createMatch(personaje)">MATCH</button>
 					</mat-card-actions>
 				</mat-card>
 			</div>
