History design changes, tag optimization in layout view, tag from show-profile opti

--- a/src/app/components/entrepreneur-create/entrepreneur-create.component.html
+++ b/src/app/components/entrepreneur-create/entrepreneur-create.component.html
@@ -1,4 +1,3 @@
-<main id="main">
 
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
@@ -22,4 +21,8 @@
     </form>
     </div>
   </section>
-</main>
+
+  <hr class="hr-3">  
+
+
+
