--- a/src/app/components/influencer-collaboration/influencer-collaboration.component.html
+++ b/src/app/components/influencer-collaboration/influencer-collaboration.component.html
@@ -1,67 +1,155 @@
-<main id="main">
-  <section class="section " id="portfolio">
+<section class="section " id="portfolio">
     <div class="container">
       <div class="section-title">
         <h2>Collaboration</h2>
         <div class="line-dec"></div>
-        <span>Select your entrepreneur favorite </span>
+        <span><p>Select your entrepreneur favorite</p> </span>
       </div>
       <div class="row">
-        <div class="col-lg-12 d-flex justify-content-center">
-          <div class="isotope-wrapper">
+        <div class="col-lg-12 col-sm-12 d-flex justify-content-center">
+          <div class="isotope-wrapper col-lg-12 col-sm-12">
             <div class="isotope-toolbar">
               <label id="portfolio-flters"><button class="active btn btn-primary" data-type="*" name="isotope-filter"></button>
                 <span class="display-6">All</span></label>
-              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Cosmetic" name="isotope-filter"></button>
-                <span>Cosmetic</span></label>
-              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Technology" name="isotope-filter"></button>
-                <span>Technology</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Esthetic" name="isotope-filter"></button>
+                <span>Esthetic</span></label>
               <label id="portfolio-flters"><button class="btn btn-primary" data-type="Food" name="isotope-filter"></button>
                 <span>Food</span></label>
               <label id="portfolio-flters"><button class="btn btn-primary" data-type="Sports" name="isotope-filter"></button>
-                <span>Sports</span></label>
+                <span>Sports
+                </span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Technology" name="isotope-filter"></button>
+                <span>Technology</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Home" name="isotope-filter"></button>
+                  <span>Home</span></label>
             </div>
             <div class="isotope-box">
-              <div class="isotope-item" data-type="Cosmetic">
-                <figure>
-                  <img src="https://static.bellezaparatodos.com/2019/12/EM-Cosmetics-Magic-Hour-Collection.jpg"
-                    alt="sq-sample26" />
-                </figure>
-              </div>
-
-              <div class="isotope-item" data-type="Technology">
-                <figure>
-                  <img src="https://cdn2.totalcode.net/mercacentro/product-zoom/es/celular-xiaomi-redmi-note-8-128-gb-azul-1.webp"
-                    alt="sq-sample26" />
-                </figure>
-              </div>
-
-              <div class="isotope-item" data-type="Technology">
-                <figure>
-                  <img src="https://falabella.scene7.com/is/image/Falabella/15229154_1?wid=800&hei=800&qlt=70"
-                    alt="sq-sample26" />
-                </figure>
+              <div class="isotope-item" data-type="Esthetic">
+                <div class="card-container">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      Descripción del emprendimiento
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
               </div>
 
               <div class="isotope-item" data-type="Food">
-                <figure>
-                  <img src="https://www.recetasjudias.com/wp-content/uploads/2015/06/Causa-Limena2.jpg"
-                    alt="sq-sample26" />
-                </figure>
+                  <div class="card-container">
+                    <mat-card class="example-card">
+                      <mat-card-header>
+                      <div mat-card-avatar class="example-header-image"></div>
+                      <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
+                      <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                      </mat-card-header>
+                      <img mat-card-image src="http://pm1.narvii.com/7658/4c600ac5be2bcd8e419df791cdfa9e97c80ed195r1-540-540v2_uhq.jpg" alt="Photo of a Shiba Inu">
+                      <br>
+                      <mat-card-content>
+                      <p>
+                        Descripción del emprendimiento
+                      </p>
+                      </mat-card-content>
+                      <mat-card-actions>
+                      </mat-card-actions>
+                    </mat-card>
+                  </div>
               </div>
 
               <div class="isotope-item" data-type="Sports">
-                <figure>
-                  <img src="https://i.linio.com/p/223a3904709c26a7f2cf84b20d84914e-product.jpg"
-                    alt="sq-sample26" />
-                </figure>
+                <div class="card-container">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://img-9gag-fun.9cache.com/photo/abGbeAB_460s.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      Descripción del emprendimiento
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
               </div>
 
-              <div class="isotope-item" data-type="Cosmetic">
-                <figure>
-                  <img src="https://static.vix.com/es/sites/default/files/styles/1x1/public/imj/esto-es-lo-que-te-sucedera-si-usas-cosmeticos-de-mala-calidad.jpg"
-                    alt="galdiator" />
-                </figure>
+              <div class="isotope-item" data-type="Technology">
+
+                <div class="card-container">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                    </mat-card-header>
+                    <br>
+                    <img mat-card-image src="https://pm1.narvii.com/6770/9ca45e6b78d9e059d8f5ada9db60c76a1e91e7a3v2_hq.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      Descripción del emprendimiento
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
+              </div>
+
+              <div class="isotope-item" data-type="Home">
+                <div class="card-container">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      Descripción del emprendimiento
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
+              </div>
+
+              <div class="isotope-item card-container" data-type="Esthetic">
+                <div class="card-container">
+                  <mat-card class="example-card">
+                  <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">Aquí iran los nombres de perfil</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      Descripción del emprendimiento
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
               </div>
             </div>
           </div>
@@ -70,4 +158,4 @@
     </div>
   </section>
 
-</main><!-- End #main -->
+
