--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -104,7 +104,9 @@
     </div>
 </header><!-- End Header -->
 
-<router-outlet></router-outlet>
+    <main id="main">
+        <router-outlet></router-outlet>
+    </main>
 
 <!-- ======= Footer ======= -->
 <footer id="footer">
