--- a/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
+++ b/src/app/components/entrepreneur-collaboration/entrepreneur-collaboration.component.html
@@ -1,67 +1,155 @@
-<main id="main">
-  <section class="section " id="portfolio">
+<section class="section " id="portfolio">
     <div class="container">
       <div class="section-title">
         <h2>Collaboration</h2>
         <div class="line-dec"></div>
-        <span>Select your influencer favorite </span>
+        <span><p>Select your entrepreneur favorite </p></span>
       </div>
       <div class="row">
-        <div class="col-lg-12 d-flex justify-content-center">
-          <div class="isotope-wrapper">
+        <div class="col-lg-12 col-sm-12 d-flex justify-content-center">
+          <div class="isotope-wrapper col-lg-12 col-sm-12">
             <div class="isotope-toolbar">
               <label id="portfolio-flters"><button class="active btn btn-primary" data-type="*" name="isotope-filter"></button>
                 <span class="display-6">All</span></label>
-              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Cosmetic" name="isotope-filter"></button>
-                <span>Cosmetic</span></label>
-              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Technology" name="isotope-filter"></button>
-                <span>Technology</span></label>
-              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Food" name="isotope-filter"></button>
-                <span>Food</span></label>
-              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Sports" name="isotope-filter"></button>
-                <span>Sports</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Fashion bloggers" name="isotope-filter"></button>
+                <span>Fashion bloggers</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Foodies" name="isotope-filter"></button>
+                <span>Foodies</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="gamers and technology gurus" name="isotope-filter"></button>
+                <span>gamers and technology gurus</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Celebrities and artists" name="isotope-filter"></button>
+                <span>Celebrities and artists</span></label>
+              <label id="portfolio-flters"><button class="btn btn-primary" data-type="Fitness and healthy life" name="isotope-filter"></button>
+                <span>Fitness and healthy life</span></label>
             </div>
             <div class="isotope-box">
-              <div class="isotope-item" data-type="Cosmetic">
-                <figure>
-                  <img src="https://elcomercio.pe/resizer/6VstkRKUycChPLg1LkQzNzbLFck=/1200x900/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/VNEMTUFDDNFXFBYSADX25454UQ.jpg"
-                    alt="sq-sample26" />
-                </figure>
+              <div class="isotope-item" data-type="Fashion bloggers">
+                <div class="card-container">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      description
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
               </div>
 
-              <div class="isotope-item" data-type="Technology">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/YrETNRtC3-s/maxresdefault.jpg"
-                    alt="sq-sample26" />
-                </figure>
+              <div class="isotope-item" data-type="Foodies">
+                  <div class="card-container">
+                    <mat-card class="example-card">
+                      <mat-card-header>
+                      <div mat-card-avatar class="example-header-image"></div>
+                      <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
+                      <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
+                      </mat-card-header>
+                      <img mat-card-image src="http://pm1.narvii.com/7658/4c600ac5be2bcd8e419df791cdfa9e97c80ed195r1-540-540v2_uhq.jpg" alt="Photo of a Shiba Inu">
+                      <br>
+                      <mat-card-content>
+                      <p>
+                        description
+
+                      </p>
+                      </mat-card-content>
+                      <mat-card-actions>
+                      </mat-card-actions>
+                    </mat-card>
+                  </div>
               </div>
 
-              <div class="isotope-item" data-type="Technology">
-                <figure>
-                  <img src="https://pbs.twimg.com/media/DSaDgAnWAAAWtqz.jpg"
-                    alt="sq-sample26" />
-                </figure>
+              <div class="isotope-item" data-type="gamers and technology gurus">
+                <div class="card-container">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://img-9gag-fun.9cache.com/photo/abGbeAB_460s.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      description
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
               </div>
 
-              <div class="isotope-item" data-type="Food">
-                <figure>
-                  <img src="https://elcomercio.pe/resizer/_osngAPYc6LNk30ozWoJRWR7y4c=/1200x1200/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/ULZM6RERGRBFFDZ7UX3OH6DQPU.jpg"
-                    alt="sq-sample26" />
-                </figure>
+              <div class="isotope-item" data-type="Celebrities and artists">
+
+                <div class="card-container">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
+                    </mat-card-header>
+                    <br>
+                    <img mat-card-image src="https://pm1.narvii.com/6770/9ca45e6b78d9e059d8f5ada9db60c76a1e91e7a3v2_hq.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      description
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
               </div>
 
-              <div class="isotope-item" data-type="Sports">
-                <figure>
-                  <img src="https://i.ytimg.com/vi/f25Yj2roCV4/maxresdefault.jpg"
-                    alt="sq-sample26" />
-                </figure>
+              <div class="isotope-item" data-type="Fitness and healthy life">
+                <div class="card-container">
+                  <mat-card class="example-card">
+                    <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      description
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
               </div>
 
-              <div class="isotope-item" data-type="Cosmetic">
-                <figure>
-                  <img src="https://www.veridicoshop.com/wp-content/uploads/2018/11/veridico-shop-james-charles-palette5.jpg"
-                    alt="galdiator" />
-                </figure>
+              <div class="isotope-item card-container" data-type="Fitness and healthy life">
+                <div class="card-container">
+                  <mat-card class="example-card">
+                  <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title style="margin-bottom: 0px;">User name</mat-card-title>
+                    <mat-card-subtitle tyle="margin-bottom: 0px;">Tag</mat-card-subtitle>
+                    </mat-card-header>
+                    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                    <br>
+                    <mat-card-content>
+                    <p>
+                      description
+                    </p>
+                    </mat-card-content>
+                    <mat-card-actions>
+                    </mat-card-actions>
+                  </mat-card>
+                </div>
               </div>
             </div>
           </div>
@@ -70,4 +158,4 @@
     </div>
   </section>
 
-</main><!-- End #main -->
+
