--- a/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
+++ b/src/app/components/entrepreneur-profile/entrepreneur-profile.component.html
@@ -1,5 +1,3 @@
-<main id="main">
-
     <!-- ======= About Section ======= -->
     <section id="about" class="about container">
         <div class="container">
@@ -9,7 +7,7 @@
                 <p>{{company.description}}</p>
             </div>
             <div class="justify-content-center">
-                <img src="../../../assets/img/empanadas-local.jpg" class="col-lg-12 col-sm-12 col-md-8 py-1">
+                <img src="../../../assets/img/empanadas-local.jpg" class="col-lg-12 col-sm-12 col-md-12">
             </div>
         </div>
     </section><!-- End About Section -->
@@ -77,4 +75,3 @@
     <!-- ======= Contact Section ======= -->
 
 
-</main><!-- End #main -->
