--- a/src/app/components/influencer-collaboration/influencer-collaboration.component.css
+++ b/src/app/components/influencer-collaboration/influencer-collaboration.component.css
@@ -15,6 +15,10 @@ body {
   box-sizing: inherit;
 }
 
+p{
+  font-size: 18px;
+}
+
 /*         section                 */
 .section {
   color: rgb(0, 0, 0);
@@ -231,3 +235,60 @@ figure.hover:after {
   opacity: 0.9;
 }
  */
+
+ /* Card History */
+
+ .card-container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.example-card {
+	max-width: 475px ;
+	margin: 3%;
+
+  }
+  
+.example-header-image {
+	background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+	background-size: cover;
+  }
+
+  .card-container p{
+    padding: 20px 0px 0px 0px;
+  }
+
+  .card-container img{
+    margin: 5px 3px 0px 1.5px;
+    float: left;
+    width:  400px;
+    height: 400px;
+    object-fit: cover;
+  }
+
+
+  @media (max-width: 1000px) {
+    .card-container img{
+      width:300px;
+    height: 300px;
+    }
+
+  }
+
+  @media (max-width: 850px) {
+    .card-container img{
+      width:200px;
+    height: 200px;
+    }
+
+  }
+
+  @media (max-width: 600px) {
+    .card-container img{
+    width: 100%;
+    height: 100%;
+    }
+
+  }
+
