--- a/src/app/components/influencer-profile/influencer-profile.component.html
+++ b/src/app/components/influencer-profile/influencer-profile.component.html
@@ -1,4 +1,4 @@
-<main id="main">
+
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -10,7 +10,7 @@
             </div>
             <div class="justify-content-center">
                 <img src="https://astelus.com/wp-content/viajes/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada.jpg"
-                     class="col-lg-12 col-sm-12 col-md-8 py-1">
+                     class="col-lg-12 col-sm-12 col-md-12">
             </div>
         </div>
     </section><!-- End About Section -->
@@ -57,4 +57,4 @@
         </div>
     </section><!-- End Facts Section -->
 
-</main><!-- End #main -->
+
