--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -14,8 +14,12 @@
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="#" class="tiktok"><i class="bx bxl-tiktok"></i></a>
+                <a href="#" class="snapchat"><i class="bx bxl-snapchat"></i></a>
+                <a href="#" class="Youtube"><i class="bx bxl-youtube"></i></a>
+                <a href="#" class="pinterest"><i class="bx bxl-pinterest"></i></a>
+                <a href="#" class="twitch"><i class="bx bxl-twitch"></i></a>
+                <a href="#" class="reddit"><i class="bx bxl-reddit"></i></a>
             </div>
         </div>
 
