changes css mat card main page

--- a/src/app/components/main-page/main-page.component.css
+++ b/src/app/components/main-page/main-page.component.css
@@ -204,7 +204,13 @@ mat-card{
 -moz-hyphens: auto;
     hyphens: auto;
 }
-mat-card-content{
-	width: 400px; 
+mat-card-content{ 
 	height:150px;
 }
+p {
+	overflow: hidden;
+	display: -webkit-box;
+	text-align : justify;
+	-webkit-line-clamp: 8;
+	-webkit-box-orient: vertical;
+  }
