show profile stars

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -22,6 +22,7 @@
 					<a routerLink="/show-profile" routerLinkActive="active"><mat-card-header>
 					<div mat-card-avatar class="example-header-image"></div>
 					<mat-card-title>{{personaje.name}}</mat-card-title>
+					<mat-card-subtitle tyle="margin-bottom: 0px;">Etiqueta</mat-card-subtitle>
 					</mat-card-header></a>
 					<img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
 					<mat-card-content>
