--- a/src/app/show-profile/show-profile.component.css
+++ b/src/app/show-profile/show-profile.component.css
@@ -231,3 +231,59 @@ figure.hover:after {
   opacity: 0.9;
 }
  */
+
+.example-header-image {
+	background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+	background-size: cover;
+} 
+
+mat-card-content{ 
+	height:150px;
+}
+p {
+	overflow: hidden;
+	display: -webkit-box;
+	text-align : justify;
+	-webkit-line-clamp: 8;
+	-webkit-box-orient: vertical;
+  }
+  .calification{
+    direction:rtl;
+  }
+  a{
+    font-size:40px;
+    color:#C2D1D9;
+    cursor:pointer;
+    margin-bottom:50px;
+    text-decoration:none;
+  }
+  .star-01:hover, .star-02:hover, .star-03:hover, .star-04:hover, .star-05:hover{
+    -webkit-transition:all .3s ease-in-out;
+    transition:.3s ease-in-out; 
+    color:black;
+  }
+  #five:hover ~ a.star{
+    -webkit-transition:all .3s ease-in-out;
+    transition:.3s ease-in-out; 
+    color:black;
+  }
+  #four:hover ~ a.star{
+    -webkit-transition:all .3s ease-in-out;
+    transition:.3s ease-in-out; 
+    color:black;
+  }
+  #three:hover ~ a.star{
+    -webkit-transition:all .3s ease-in-out;
+    transition:.3s ease-in-out; 
+    color:black;
+  }
+  #two:hover ~ a.star{
+    -webkit-transition:all .3s ease-in-out;
+    transition:.3s ease-in-out; 
+    color:black;
+  }
+  #one:hover ~ a.star{
+    -webkit-transition:all .3s ease-in-out;
+    transition:.3s ease-in-out; 
+    color:black;
+  }
