--- a/src/app/components/influencer-profile/influencer-profile.component.html
+++ b/src/app/components/influencer-profile/influencer-profile.component.html
@@ -1,41 +1,31 @@
 
+     <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+        <div class="hero-container" data-aos="fade-in">
+          <h1>Name</h1>
+          <p>I'm <span>INFLUENCER</span></p>
+        </div>
+      </section><!-- End Hero -->
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-        <div class="container">
-
+        <div class="container">     
             <div class="section-title">
                 <h2>About Me</h2>
-                <p>{{misObjetos.description}}</p>
             </div>
             <div class="justify-content-center">
-                <img src="https://astelus.com/wp-content/viajes/Lago-Moraine-Parque-Nacional-Banff-Alberta-Canada.jpg"
-                     class="col-lg-12 col-sm-12 col-md-12">
+                <p>{{misObjetos.description}}</p>
             </div>
         </div>
     </section><!-- End About Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <section id="facts" class="facts" style="padding: 0 2% 10px 2%;">
         <div class="container">
-
-            <div class="section-title">
-                <!--Aquí puede ser mucho mejor trar los datos generales-->
+            <div class="section-title" style="padding: 0;">
                 <h2>Facts</h2>
             </div>
-
             <div class="row no-gutters">
-                <!--Podemos guiarnos para las fotos-->
-                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-                    <div class="count-box">
-                        <i class="bi bi-emoji-smile"></i>
-                        <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1"
-                              class="purecounter"></span>
-                        <p><strong>Contacts made </strong>Who many Entrepreneurs wre interested in Alex profile</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-lg-6 col-md-6 col-sm-12 " data-aos="fade-up" data-aos-delay="100">
                     <div class="count-box">
                         <i class="bi bi-journal-richtext"></i>
                         <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1"
@@ -44,7 +34,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
+                <div class="col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-delay="300">
                     <div class="count-box">
                         <i class="bi bi-people"></i>
                         <span data-purecounter-start="0" data-purecounter-end="32550" data-purecounter-duration="1"
@@ -53,8 +43,28 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section><!-- End Facts Section -->
+
+    <section class="social-media">
+        <div class="container">
+            <div class="section-title" style="padding: 0;">
+                <h2>Social media</h2>
+            </div>
+            <div class="row no-gutters">
+                <div  data-aos="fade-up" data-aos-delay="100">
+                        <i class="bx bxl-twitter"></i>
+                        <i class="bx bxl-facebook"></i>
+                        <i class="bx bxl-instagram"></i>
+                        <i class="bx bxl-tiktok"></i>
+                        <i class="bx bxl-snapchat"></i>
+                        <i class="bx bxl-youtube"></i>
+                        <i class="bx bxl-pinterest"></i>
+                        <i class="bx bxl-twitch"></i>
+                        <i class="bx bxl-reddit"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
